# SemiProject

./: .gitignore  README.md
backend/: .env  .gitignore  README.md  alembic.ini  database.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  kiosk.py  test.py
backend/app/routers/admin/: admin.py
backend/app/routers/kiosk/: kiosk.py
backend/app/routers/ml/: detect.py  statics.py  sugestion.py
backend/app/routers/web/: auth.py  mypage.py  plan.py  ticket.py
backend/app/utils/: auth_utils.py
camera/: main.py  pyproject.toml
camera/app/: app.py
camera/app/routers/: vision_api.py
camera/app/vision/: camera_worker.py  seat_manager.py  seat_state_machine.py
camera/app/vision/config/: camera_config.json
camera/app/vision/utils/: camera_config.generated.json  detectors.py
camera/utils/: camera_class.py  detectors.py  schemas.py  seat_manager.py  seat_state_machine.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Home.jsx  index.css  main.jsx
frontend/src/api/: testAPI.js
frontend/src/components/: CommonButton.jsx  Layout.jsx
frontend/src/kiosk/: KioskApp.jsx
frontend/src/kiosk/components/: KioskAlertModal.jsx  KioskCheckIn.jsx  KioskCheckOut.jsx  KioskHeader.jsx  KioskPaymentModal.jsx  (+3 more)
frontend/src/pages/: About.jsx  Home.jsx  Test.jsx
frontend/src/stores/: useTestStore.js
frontend/src/utils/: authApi.js  authClient.js  authFetchUtils.js  useAuthStores.js  useMemberStore.js  useTestStore.js
(+49 files in other folders)
