[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pathlib>=1.0.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "torch==2.2.0",
    "ultralytics>=8.3.232",
    "uvicorn>=0.38.0",
]
